client/src/components/PlaylistPage/PlaylistPage.scss
.playlist-page {
  display: flex;
  // flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 90vh;
  width: 100vw;

  .playlist-page-container {
    display: flex;
    width: 100vw;
    justify-content: center;
  }

  .playlist-page-left {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
    height: inherit;
    width: 30vw;
    margin-right: 8rem;

    img {
      width: inherit;
      border-radius: 16px;
    }
  }

  .playlist-page-right {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    min-width: 30vw;
    background-color: rgba(0, 0, 0, 0.4);
    border-radius: 16px;

    .songs-section {
      display: flex;
      justify-content: space-between;
    }

    .game-code-section {
      display: flex;
      justify-content: space-between;
      align-items: center;
    }
  }
}

